# gif-solana-web3-app

myepicproject/: Anchor.toml
myepicproject/programs/myepicproject/: Cargo.toml
myepicproject/programs/myepicproject/src/: lib.rs
myepicproject/tests/: myepicproject.js
react-web3-app/: package-lock.json  package.json  replit_zip_error_log.txt
react-web3-app/src/: App.css  App.jsx  keypair.json
