[package]
name = "myepicproject"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "myepicproject"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
#[dependencies.uuid]
#version = "1.2.2"
#features = [
 #   "v4",                # Lets you generate random UUIDs
  #  "fast-rng",          # Use a faster (but still sufficiently random) RNG
   # "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
#]